# yast-tune

./: .gitignore  .travis.yml  MAINTAINER  README.md  configure.in.in  yast2-tune.spec.in
doc/: Makefile.am
doc/autodocs/: .gitignore
hwinfo/: .cvsignore  MAINTAINER  Makefile.am  README  RPMNAME  configure.in  configure.in.in  yast2-config-hwinfo.spec.in
hwinfo/doc/: Makefile.am
hwinfo/package/: .cvsignore  yast2-config-hwinfo.changes
hwinfo/src/: InitHWinfo.ycp  Makefile.am  NewID.ycp  SystemSettings.ycp  classnames.ycp  hwinfo.desktop  hwinfo.y2cc  hwinfo.ycp  hwinfo_proposal.ycp  inst_hwinfo.ycp  menuentry_hwinfo.y2cc  menuentry_hwinfo.ycp  newid.ycp  pci_id.desktop  pci_id.ycp  proposal_hwinfo.ycp  routines.ycp  system_settings.desktop  system_settings.ycp  system_settings_dialogs.ycp  system_settings_finish.ycp  system_settings_ui.ycp
idedma/: .cvsignore  RPMNAME  configure.in.in  yast2-config-idedma.spec.in  yast2-tune-idedma.spec.in
idedma/agents/: Makefile.am
idedma/doc/: Makefile.am  idedma_features.txt  idedma_specification.html
idedma/doc/autodocs/: Makefile.am
idedma/package/: yast2-config-idedma.changes  yast2-tune-idedma.changes
idedma/scrconf/: cfg_hardware.scr
idedma/src/: Idedma.ycp  Makefile.am  cmdline.ycp  helps.ycp  idedma.desktop  idedma.y2cc  idedma.ycp  idedma_auto.ycp  idedma_summary.ycp  idedma_write.ycp  menuentry_idedma.y2cc  ui.ycp
idedma/testsuite/: Makefile.am
idedma/testsuite/tests/: Idedma.out  Idedma.ycp
package/: yast2-tune.changes  yast2-tune.spec
src/: Makefile.am
src/clients/: hwinfo.rb  hwinfo.ycp  hwinfo_proposal.rb  hwinfo_proposal.ycp  inst_hwinfo.rb  system_settings.rb  system_settings.ycp  system_settings_finish.rb  system_settings_finish.ycp
src/desktop/: hwinfo.desktop  org.opensuse.yast.HWInfo.desktop  org.opensuse.yast.SystemSettings.desktop  system_settings.desktop
src/include/hwinfo/: newid.rb  routines.rb  routines.ycp  system_settings_dialogs.rb  system_settings_ui.rb
src/lib/tune/: widgets.rb
src/metainfo/: yast2-tune.metainfo.xml
src/modules/: InitHWinfo.rb  InitHWinfo.ycp  NewID.rb  NewID.ycp  SystemSettings.rb  SystemSettings.ycp
src/scrconf/: modprobe_newid.scr
test/: system_settings_test.rb  test_helper.rb
tune/: RPMNAME  yast2-tune.spec.in
tune/hwinfo/: Makefile.am
tune/hwinfo/scrconf/: Makefile.am  modprobe_newid.scr
tune/hwinfo/src/: InitHWinfo.ycp  Makefile.am  NewID.ycp  SystemSettings.ycp  classnames.ycp  hwinfo.desktop  newid.ycp  pci_id.ycp  system_settings.ycp  system_settings_dialogs.ycp  system_settings_ui.ycp
tune/idedma/: Makefile.am
tune/idedma/doc/: idedma_features.txt  idedma_specification.html
tune/idedma/scrconf/: Makefile.am  cfg_ide.scr
tune/idedma/src/: Idedma.ycp  Makefile.am  cmdline.ycp  helps.ycp  idedma_write.ycp
